content/pt-br/devops/kubernetes/ckad/lightning-lab-1/2/secure-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: secure-pod
  name: secure-pod
spec:
  containers:
    - name: secure-pod
      image: nginx:alpine
