content/pt-br/devops/kubernetes/ckad/lightning-lab-1/2/webapp-color.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: webapp-color
  name: webapp-color
spec:
  containers:
    - name: webapp-color
      image: nginx:alpine
