content/pt-br/devops/kubernetes/ckad/lightning-lab-1/2/secure-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: secure-service
  name: secure-service
spec:
  ports:
    - targetPort: 80 # assume the same port as the port
      port: 80 # required
  type: ClusterIP
  selector:
    run: secure-pod
